# OrbLang

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  Makefile  README.md  test.txt
doc/: orb_spec_mockup.txt  orb_spec_plan.txt
doc/examples/: README.md  fibonacci.orb  fizzbuzz.orb  hello_world.orb  hundred_hellos.orb  macro_vals.orb  overloading.orb
doc/examples/00_HelloWorld/: README.md  main.orb
doc/examples/01_FizzBuzz/: README.md
doc/examples/02_Fibonacci/: README.md  main.orb
doc/examples/03_BinTree/: README.md  main.orb
doc/examples/04_BinTreeMacro/: README.md  main.orb
doc/misc/: old_readme.md  orb_spec_mockup.txt
docs/: _config.yml  index.md  page1.md  page1_1.md  page1_2.md  page2.md
docs/_data/: navigation.yml
docs/_includes/: navigation.html  prevNext.html  sidebar.html  topbar.html
docs/_layouts/: default.html
docs/examples/: quick_examples.md  quick_examples_binarytree.md  quick_examples_fibonacci.md  quick_examples_fizzbuz.md  quick_examples_fizzbuzz.md  quick_examples_helloworld.md  quick_examples_logo.md  quick_examples_primes.md  quick_examples_reduce.md
docs/pages/: 01_hello_world.md  02_literals.md  03_comments.md  04_01_arithmetic_operators.md  04_02_bitwise_operators.md  04_03_comparison_operators.md  04_04_logical_operators.md  04_operators.md  05_primitive_types.md  06_symbols.md  07_assignment.md  08_casting.md  09_control_flow.md  09a_if.md  09b_switch.md  09c_while.md  09d_for.md  09e_range.md  09f_repeat.md  09g_break_and_continue.md  10_functions.md  11_scopes.md  12_type_system_extended.md  12a_arrays.md  12b_tuples.md  12c_ref_values.md  12d_pointers.md  12e_array_pointers.md  12f_constant_types.md  12g_combining.md  12h_alias.md  12k_data_types.md  12l_enums.md  12m_function_types.md  13_importing_source_files.md  13_lambdas.md  14_control_flow_revisited.md  14a_block.md  14b_exit.md  14c_loop.md  (+68 more)
docs/references/: reference_base.md  reference_base_constructors.md  reference_base_control_flow.md  reference_base_misc.md  reference_base_operators.md  reference_orb.md  reference_orb_attrisdef.md  reference_orb_attrof.md  reference_orb_block.md  reference_orb_cast.md  reference_orb_data.md  reference_orb_eval.md  reference_orb_exit.md  reference_orb_explicit.md  reference_orb_fnc.md  reference_orb_import.md  reference_orb_isdef.md  reference_orb_iseval.md  reference_orb_lenof.md  reference_orb_loop.md  reference_orb_mac.md  reference_orb_message.md  reference_orb_operators_nonunary.md  reference_orb_operators_unary.md  reference_orb_pass.md  reference_orb_ret.md  reference_orb_sizeof.md  reference_orb_sym.md  reference_orb_typeof.md  reference_std.md  reference_std_common.md  reference_std_io.md  reference_std_list.md  reference_std_one.md
include/: AST.h  ClangAdapter.h  CodeLoc.h  CodeProcessor.h  Codegen.h  CompileMessages.h  Compiler.h  Evaluator.h  KnownVal.h  Lexer.h  LiteralVal.h  LlvmVal.h  NamePool.h  NodeVal.h  Parser.h  Processor.h  Reserved.h  SymbolTable.h  Token.h  TypeTable.h  Values.h  utils.h
libs/: base.orb  clib.orb
libs/std/: List.orb  One.orb  common.orb  io.orb  print.orb  scan.orb
misc/: README.md  orb_spec_mockup.txt
src/: AST.cpp  AST_print.cpp  AttrMap.cpp  AttrMap.h  BlockControl.cpp  BlockControl.h  BlockRaii.cpp  BlockRaii.h  ClangAdapter.cpp  ClangAdapter.h  CodeGen.cpp  CodeGen_expr.cpp  CodeGen_impl.cpp  CodeGen_util.cpp  CodeLoc.cpp  CodeLoc.h  CodeProcessor_expr.cpp  CodeProcessor_impl.cpp  CodeProcessor_util.cpp  Codegen.cpp  Codegen.h  Codegen_expr.cpp  Codegen_impl.cpp  Codegen_util.cpp  ComparisonSignal.cpp  ComparisonSignal.h  CompilationMessages.cpp  CompilationMessages.h  CompilationOrchestrator.cpp  CompilationOrchestrator.h  CompileMessages.cpp  CompileMessages.h  Compiler.cpp  Compiler.h  EscapeScore.h  EvalVal.cpp  EvalVal.h  Evaluator.cpp  Evaluator.h  Evaluator_expr.cpp  (+52 more)
tests/: base.orb  clib.orb  empty.orb  io.orb  run_tests.py  test1.orb  test1.txt  test1x.txt  test2.orb  test2.txt  test2x.txt  test3.orb  test3.txt  test3x.txt  test4.orb  test4.txt  test5.orb  test6.orb  test6.txt  test7.orb  test7.txt  utility.cpp
tests/data/: test6.orb
tests/negative/: _cycle_back.orb  test_attr_owning.orb  test_attr_type_compiled.orb  test_attr_type_no_type.orb  test_attr_type_not_type.orb  test_attr_type_owning.orb  test_attrs_non_type_compiled.orb  test_attrs_non_type_multi.orb  test_attrs_non_type_name_dupl.orb  test_attrs_non_type_owning.orb  test_attrs_non_type_reproc_owning.orb  test_attrs_non_type_then_type_attr.orb  test_attrs_non_type_type.orb  test_attrs_owning.orb  test_attrs_type.orb  test_attrs_type_single.orb  test_block_bare_has_type.orb  test_block_eval_passing_exit.orb  test_block_eval_passing_no_pass.orb  test_block_eval_passing_no_pass_has_loop.orb  test_block_glob_exit.orb  test_block_non_eval_eval_exit.orb  test_block_non_eval_eval_loop.orb  test_block_non_eval_eval_pass.orb  test_block_non_eval_exit_eval.orb  test_block_passing_exit.orb  test_block_passing_no_pass.orb  test_block_passing_no_pass_has_loop.orb  test_block_stmnt_nested.orb  test_block_terminals.orb  test_brace_mismatch.orb  test_break_no_semicolon.orb  test_break_nowhere.orb  test_call_ambigious.orb  test_call_arg_invoke_arg_param_owning.orb  test_call_arg_non_owning_param_owning.orb  test_call_arg_owning_param_owning.orb  test_call_dyn_scope.orb  test_call_eval_arg_non_eval.orb  test_call_eval_dyn_scope.orb  (+300 more)
tests/positive/: test1.orb  test1.txt  test2.orb  test2.txt  test3.orb  test3.txt  test4.orb  test5.orb  test6.orb  test6.txt  test7.orb  test_attrs.orb  test_attrs.txt  test_base.orb  test_base.txt  test_block.orb  test_block.txt  test_block_eval.orb  test_block_eval.txt  test_cast.orb  test_cast.txt  test_cast_eval.orb  test_cast_eval.txt  test_cn.orb  test_cn.txt  test_comment.orb  test_data.orb  test_data.txt  test_data_eval.orb  test_data_eval.txt  test_drop.orb  test_drop.txt  test_drop_eval.orb  test_drop_eval.txt  test_expr.orb  test_expr.txt  test_expr_eval.orb  test_expr_eval.txt  test_function.orb  test_function.txt  (+39 more)
tests/util/: base.orb  clib.orb  io.orb  print.orb
(+20 files in other folders)
